--- a/views/patientdrugs.ejs
+++ b/views/patientdrugs.ejs
@@ -76,11 +76,17 @@
             text-overflow: ellipsis;
             margin-bottom: 10px;
         }
+       .medicine {
+    padding: 10px;
+    border: 1px solid;
+    margin-bottom: 20px;
+    border-radius: 10px;}
 
         .show-more {
-            color: #007bff;
+            color: white;
             cursor: pointer;
-            text-decoration: underline;
+            font-size: larger;
+            text-decoration: none;
         }
 
         .expanded-description {
